--- a/bilaterals-client/package.json
+++ b/bilaterals-client/package.json
@@ -8,8 +8,14 @@
     "watch": "ng build --watch --configuration development",
     "test": "jest",
     "test:watch": "jest --watch",
-    "test:coverage": "jest --coverage"
+    "test:coverage": "jest --coverage",
+    "lint": "eslint src/ --fix",
+    "lint:check": "eslint src/",
+    "format": "prettier --write \"src/**/*.{ts,html,scss,css,js,json}\"",
+    "format:check": "prettier --check \"src/**/*.{ts,html,scss,css,js,json}\"",
+    "code-quality": "npm run lint:check && npm run format:check && npm run test"
   },
+  "type": "module",
   "private": true,
   "dependencies": {
     "@angular/common": "^20.0.0",
@@ -27,10 +33,17 @@
     "@angular/cli": "^20.0.0",
     "@angular/compiler-cli": "^20.0.0",
     "@types/jest": "^30.0.0",
+    "angular-eslint": "^20.1.1",
+    "eslint": "^9.31.0",
+    "eslint-config-prettier": "^10.1.8",
+    "eslint-plugin-prettier": "^5.5.3",
+    "globals": "^16.3.0",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^30.0.5",
     "jest-preset-angular": "^15.0.0",
+    "prettier": "^3.6.2",
     "ts-node": "^10.9.2",
-    "typescript": "~5.8.2"
+    "typescript": "~5.8.2",
+    "typescript-eslint": "^8.38.0"
   }
 }
