--- a/.github/workflows/sonarcloud-analysis.yml
+++ b/.github/workflows/sonarcloud-analysis.yml
@@ -72,7 +72,7 @@ jobs:
             --secret-id dev/app/frontend/prms/bilateral \
             --query SecretString \
             --output text | tee src/environments/environment.ts > src/environments/environment.prod.ts
-        working-directory: ./onecgiar-pr-client
+        working-directory: ./bilaterals-client
 
       # Step 9: Install backend dependencies
       - name: Install backend dependencies
