--- a/bilaterals-client/.vscode/settings.json
+++ b/bilaterals-client/.vscode/settings.json
@@ -1,5 +1,5 @@
 {
-  "prettier.configPath": ".prettierrc",
+  "prettier.configPath": "prettier.config.js",
   "editor.defaultFormatter": "esbenp.prettier-vscode",
   "editor.formatOnSave": true,
   "[json]": {
