🔧 Update ESLint command in package.json to remove auto-fix option for improved linting control

--- a/bilaterals-client/package.json
+++ b/bilaterals-client/package.json
@@ -9,7 +9,7 @@
     "test": "jest",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
-    "lint": "eslint src/ --fix",
+    "lint": "eslint src/",
     "lint:check": "eslint src/",
     "format": "prettier --write \"src/**/*.{ts,html,scss,css,js,json}\"",
     "format:check": "prettier --check \"src/**/*.{ts,html,scss,css,js,json}\"",
